# valm

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
configs/: grpo.json  last.json  mc.json  mse.json  offline.json  test.json  value-net.json  vt-fast.json  vt.json
env_assets/: wordle_words.txt
episode_viewer/: viewer.html
python/llmrl/: base_model_loader.py  build_offline.py  chat.py  cli.py  config.py  eval.py  experiement.py  experiment.py  logger.py  play.py  train_rl.py  train_value.py  update_step.py
python/valm/: _envs.pyi  base_model_loader.py  buffer.py  build_offline.py  cli.py  config.py  engine.py  eval.py  experiment.py  logger.py  pipeline.py  play.py  train_rl.py  train_value.py  util.py
python/vaml/: _envs.pyi  base_model_loader.py  buffer.py  build_offline.py  chat.py  cli.py  (+13 more)
src/: arithmetic.rs  base_conversion.rs  countdown.rs  date_arith.rs  env.rs  graph.rs  groups.rs  lib.rs  spatial.rs  sudoku.rs  wordle.rs
tests/: test_agent_local.py  test_attention.py  test_buffer.py  test_env_bindings.py  test_episode_payload.py  test_grouped_listener.py  test_grpo_advantages.py  test_optimizer.py  test_optimizer_config.py  test_param_dtypes.py  test_ppo_advantages.py  test_update_step_integration.py  test_util.py  test_value_representation.py  verify_offline_loading.py
tools/: chat_benchmark.py  debug_mlp_lora_shapes.py  grpo_vs_ppo_benchmark.py  launch_pod.sh  plot_sweep.py  pull_sweep.py  update_step_benchmark.py
ux/: README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
(+85 files in other folders)
