[package]
name = "vaml"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_envs"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.14.0"
numpy = "0.27.1"
pyo3 = "0.27.1"
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.12.2"
