[project]
name = "vaml"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dynamic = ["version"]
dependencies = [
    "distrax>=0.1.7",
    "einops>=0.8.1",
    "flax>=0.12.0",
    "jinja2>=3.1.6",
    "ml-dtypes>=0.5.3",
    "optax>=0.2.6",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "safetensors>=0.6.2",
    "tensorboardX>=2.6.2.2",
    "wandb>=0.19.1",
    "transformers>=4.57.1",
    "coolname>=2.2.0",
    "fsspec>=2025.10.0",
    "typer>=0.21.1",
    "jax[cuda13]>=0.8.2",
    "matplotlib>=3.10.8",
    "httpx>=0.28.1",
]

[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vaml._envs"

[dependency-groups]
test = [
    "pytest>=9.0.2",
]

[project.scripts]
vaml = "vaml.cli:app"

[project.optional-dependencies]
server = [
    "fastapi[standard]>=0.136.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]

[tool.uv]
exclude-newer = "1 week"
